objects/ssot__AcademicTermRegstrnTimeline__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Academic Term Registration Timeline Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationCloseDate__c</fullName>
        <label>Registration Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationOpenDate__c</fullName>
        <label>Registration Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StudentAcademicLevel__c</fullName>
        <label>Student Academic Level</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StudyYearClassification__c</fullName>
        <label>Study Year Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039790876_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicTermRegstrnTimeline_Academic_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>AcademicTermRegstrnTimeline_Academic_rel</relationshipLabel>
        <relationshipName>rel_1731039790876_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>